# boilerplate

boilerplate/: .pre-commit-config.yaml  manage.py  pyproject.toml
boilerplate/config/: custom_middleware.py  urls.py  wsgi.py
boilerplate/config/settings/: base.py
boilerplate/users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
boilerplate/users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_email_alter_user_name_and_more.py  0003_alter_user_date_joined_alter_user_is_active_and_more.py  0004_alter_user_date_joined_alter_user_is_active_and_more.py
